<resources>
    <string name="app_name">What Is The Distance</string>
    <string name="app_about_title">About the app</string>
    <string name="app_about_agree">Got it</string>
    <string name="app_about_text">This is the best app for measuring the distance between two rail stations</string>
    <string name="error_stations_data_loading">Error with stations data loading</string>
    <string name="departure_station">Departure station</string>
    <string name="arrival_station">Arrival station</string>
    <string name="measuring_fragment">Measuring fragment</string>
    <string name="measure">Measure</string>
    <string name="stations_list">Stations list</string>
    <string name="stations">Stations</string>
    <string name="distance">Distance</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
</resources>